Fix MUI element errors and env variable issues
- Corrected invalid key values for MUI elements
- Fixed unreadable <a> element props in BottomNavigation
- Resolved issues with environment variables

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,22 +22,10 @@
   color: #61dafb;
 }
 
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .container {
   background: 2px solid black;
   display: flex;
   flex-direction: column;
-
 }
 
 .searchForm {
@@ -51,8 +33,7 @@
   margin-inline: 30vw;
 }
 
-
 .card {
   max-width: 345;
-  min-height: 500
+  min-height: 500;
 }
